--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+   
+}
+
+
 .carousel-container {
     position: relative;
     overflow: hidden;
@@ -16,9 +24,12 @@
     width: 100%;
     height: 100%;
     opacity: 0;
-    transition: opacity 0.5s ease-in-out;
+    transition: opacity 0.7s ease-in-out;
+    background-color: black;
+    overflow: hidden;
 }
 
 .carousel-slide.active {
     opacity: 1;
 }
+
