--- a/styles/styles.css
+++ b/styles/styles.css
@@ -699,6 +699,10 @@ video {
   margin-top: 1.5rem;
 }
 
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
 .flex {
   display: flex;
 }
@@ -755,6 +759,14 @@ video {
   height: 450px;
 }
 
+.h-5 {
+  height: 1.25rem;
+}
+
+.h-40 {
+  height: 10rem;
+}
+
 .min-h-\[50vh\] {
   min-height: 50vh;
 }
@@ -809,6 +821,14 @@ video {
 
 .w-64 {
   width: 16rem;
+}
+
+.w-5 {
+  width: 1.25rem;
+}
+
+.w-40 {
+  width: 10rem;
 }
 
 .max-w-4xl {
@@ -873,10 +893,38 @@ video {
   gap: 1.5rem;
 }
 
+.gap-8 {
+  gap: 2rem;
+}
+
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
+.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
 .overflow-hidden {
@@ -893,6 +941,14 @@ video {
 
 .border {
   border-width: 1px;
+}
+
+.border-t {
+  border-top-width: 1px;
+}
+
+.border-b {
+  border-bottom-width: 1px;
 }
 
 .border-\[\#A98467\] {
@@ -913,6 +969,14 @@ video {
 .border-\[\#ADC178\] {
   --tw-border-opacity: 1;
   border-color: rgb(173 193 120 / var(--tw-border-opacity));
+}
+
+.border-\[\#DDE5B6\]\/20 {
+  border-color: rgb(221 229 182 / 0.2);
+}
+
+.border-\[\#FEFAE0\]\/30 {
+  border-color: rgb(254 250 224 / 0.3);
 }
 
 .bg-\[\#6C584C\] {
@@ -945,6 +1009,10 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#F0EAD2\]\/10 {
+  background-color: rgb(240 234 210 / 0.1);
+}
+
 .bg-opacity-0 {
   --tw-bg-opacity: 0;
 }
@@ -969,6 +1037,11 @@ video {
 
 .to-transparent {
   --tw-gradient-to: transparent var(--tw-gradient-to-position);
+}
+
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .object-cover {
@@ -1026,6 +1099,19 @@ video {
   padding-bottom: 2rem;
 }
 
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+.pt-8 {
+  padding-top: 2rem;
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -1077,6 +1163,10 @@ video {
   font-weight: 600;
 }
 
+.leading-relaxed {
+  line-height: 1.625;
+}
+
 .text-\[\#DDE5B6\] {
   --tw-text-opacity: 1;
   color: rgb(221 229 182 / var(--tw-text-opacity));
@@ -1120,6 +1210,21 @@ video {
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.text-\[\#ADC178\] {
+  --tw-text-opacity: 1;
+  color: rgb(173 193 120 / var(--tw-text-opacity));
+}
+
+.text-\[\#606C38\] {
+  --tw-text-opacity: 1;
+  color: rgb(96 108 56 / var(--tw-text-opacity));
+}
+
+.text-\[\#FEFAE0\] {
+  --tw-text-opacity: 1;
+  color: rgb(254 250 224 / var(--tw-text-opacity));
 }
 
 .opacity-0 {
@@ -1175,6 +1280,12 @@ video {
   transition-duration: 150ms;
 }
 
+.transition-colors {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .duration-300 {
   transition-duration: 300ms;
 }
@@ -1186,6 +1297,11 @@ video {
 .hover\:text-\[\#ADC178\]:hover {
   --tw-text-opacity: 1;
   color: rgb(173 193 120 / var(--tw-text-opacity));
+}
+
+.hover\:text-\[\#F0EAD2\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(240 234 210 / var(--tw-text-opacity));
 }
 
 .hover\:shadow-lg:hover {
