--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1461,6 +1461,10 @@ video {
     padding: 2rem;
   }
 
+  .sm\:p-1 {
+    padding: 0.25rem;
+  }
+
   .sm\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -1530,6 +1534,18 @@ video {
 
   .md\:min-h-\[200vh\] {
     min-height: 200vh;
+  }
+
+  .md\:w-full {
+    width: 100%;
+  }
+
+  .md\:w-5\/6 {
+    width: 83.333333%;
+  }
+
+  .md\:w-3\/4 {
+    width: 75%;
   }
 
   .md\:grid-cols-3 {
