--- a/animation/animations.css
+++ b/animation/animations.css
@@ -186,7 +186,7 @@
 .page-6.is-visible .image-item:nth-child(7) { animation-delay: 0.7s; }
 .page-6.is-visible .image-item:nth-child(8) { animation-delay: 0.8s; }
 .page-6.is-visible .image-item:nth-child(9) { animation-delay: 0.9s; }
-.page-6.is-visible .image-item:nth-child(10) { animation-delay: 1.0s; }
+.page-6.is-visible .image-item:nth-child(10) { animation-delay: 1.0s;}
 
 
 
@@ -317,3 +317,77 @@
     animation: slideOutRight 0.7s ease-out forwards;
 }
 
+@media (max-width: 480px) { 
+
+    /* Page 3 */
+
+    .page-3.is-visible h1 {
+        animation: slideInRight 0.5s ease-out forwards;
+      }
+      
+      .page-3.is-visible .speaker-card:nth-child(1) {
+        animation: slideInLeft 1s ease-out forwards;
+      }
+      
+      .page-3.is-visible .speaker-card:nth-child(2) {
+        animation: slideInRight 1s ease-out forwards;
+      }
+      
+      .page-3.is-visible .speaker-card:nth-child(3) {
+        animation: slideInLeft 1s ease-out forwards;
+      }
+
+
+
+    /* Page 3 no-visible*/
+    .page-3.no-visible h1 {
+        animation: slideOutRight 0.8s ease-out forwards; 
+      }
+      
+      .page-3.no-visible .speaker-card:nth-child(1) {
+        animation: slideOutLeft 0.8s ease-out forwards; 
+      }
+      
+      .page-3.no-visible .speaker-card:nth-child(2) {
+        animation: slideOutRight  0.8s ease-out forwards; 
+      }
+      
+      .page-3.no-visible .speaker-card:nth-child(3) {
+        animation: slideOutLeft 0.8s ease-out forwards; 
+      }
+
+    
+    /* Page 7 */
+
+    .page-7.is-visible h1 {
+        animation: slideInLeft 0.5s ease-out forwards;
+    }
+    
+    .page-7.is-visible .ideas:nth-child(1) {
+        animation: slideInLeft 0.7s ease-out forwards;
+    }
+    
+    .page-7.is-visible .ideas:nth-child(2) {
+        animation: slideInLeft 0.7s ease-out forwards;
+    }
+    
+    .page-7.is-visible .ideas:nth-child(3) {
+        animation: slideInLeft 0.7s ease-out forwards;
+    }
+    .page-7.is-visible .ideas:nth-child(4) {
+        animation: slideInLeft 0.7s ease-out forwards;
+    }
+    
+    .page-7.is-visible .ideas:nth-child(5) {
+        animation: slideInLeft 0.7s ease-out forwards;
+    }
+    
+    .page-7.is-visible .ideas:nth-child(6) {
+        animation: slideInLeft 0.7s ease-out  forwards;
+    }
+
+
+
+
+
+}
